# opencl

./: .clangd  .directory  .gitignore  CMakeLists.txt  LICENSE  README.md  clangd-settings.json
.cache/clangd/index/: file_tools.hpp.217FD2A20A99ABDD.idx  file_tools.hpp.852A76F750907720.idx  main.cpp.1DDC96A03499930B.idx  main.cpp.56E02D7A14DD8DD7.idx  main.cpp.6BB85B2827BCFCE0.idx  main.cpp.928D15A34697F88F.idx  main.cpp.AB6603A89184CD1B.idx  main.cpp.BECD5585AB31138C.idx  main.cpp.CE759618AD24EE37.idx  main.cpp.D5AE2D3132DC8D9F.idx  main.cpp.E4C1D2AEB3B4224B.idx  main.cpp.F4AF869EF2B5A478.idx  main.cpp.F4BDC4A37D5FD47F.idx
00-hello-world/: CMakeLists.txt  README.md  main2.cpp
01-check-opencl/: CMakeLists.txt  main.cpp
02-check-kernel/: CMakeLists.txt  README.md  main.cpp
03-vadd-kernel/: CMakeLists.txt  main.cpp  vadd.cl
04-matrix-multiplication/: CMakeLists.txt  main.cpp  matmul.cl
05-private-memory/: CMakeLists.txt  main.cpp  matmul_row.cl  matmul_row_private.cl
06-local-memory/: CMakeLists.txt  main.cpp  matmul_local.cl  matmul_row_private_local.cl  matmul_row_private_local_test.cl
06-local-memory/matrices/: a.matrix  b.matrix
excercises/01-check-opencl/: main.cpp
hello-world/: CMakeLists.txt  README.md  main  main.cpp
include/: easy_opencl.hpp  file_tools.hpp
src/include/: file_tools.hpp
